--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -31,3 +31,27 @@
     transform: rotate(360deg);
   }
 }
+
+
+.preview{
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 5px
+}
+
+
+img{
+width: 200px;
+height: 200px;
+}
+
+.time, .like, h3{
+  display: inline-block;
+  margin: 0;
+  padding: 0 10px;
+  font-size: 14px;
+}
+
+.modal-open {
+ overflow: hidden
+  }
